[package]
name = "nosql-contracts"
version = "0.5.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# Defines a feature named `webp` that does not enable any other features.
default = ["assets"]
assets = []
candles-import = []
instruments = []
bidasks = []
payments = []
blockchains = []
external-balances = []
trading-profiles = []
trading-groups = []
markup-profiles = []
exchange = []
images = []
candles = []

[dependencies]
my-no-sql-server-abstractions = { tag = "0.1.1", git = "https://github.com/MyJetTools/my-no-sql-server-abstractions.git" }
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
serde = { version = "*", features = ["derive"] }