[package]
name = "nosql-contracts"
version = "1.1.12"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# Defines a feature named `webp` that does not enable any other features.
default = ["assets"]
assets = []
candles-import = []
instruments = []
bidasks = []
payments = []
blockchains = []
external-balances = []
trading-profiles = []
trading-groups = []
markup-profiles = []
exchange = []
images = []
candles = []

[dependencies]
service-sdk = { tag = "0.2.5", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "macros",
    "my-nosql-sdk",
] }
serde = { version = "*", features = ["derive"] }